<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_flow"
    app:startDestination="@id/nav_articles">
    <fragment
        android:id="@+id/nav_articles"
        android:name="ru.skillbranch.skillarticles.ui.articles.ArticlesFragment"
        android:label="@string/title_articles"
        tools:layout="@layout/fragment_articles" >
        <action
            android:id="@+id/to_article"
            app:destination="@id/page_article" />
        <argument
            android:name="is_bookmarks"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/nav_bookmarks"
        android:name="ru.skillbranch.skillarticles.ui.articles.ArticlesFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_articles" >
        <argument
            android:name="is_bookmarks"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.skillbranch.skillarticles.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/page_article"
        android:name="ru.skillbranch.skillarticles.ui.article.ArticleFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_article"> <!-- set title from args -->
        <argument
            android:name="article_id"
            app:argType="string" />
        <argument
            android:name="author"
            app:argType="string" />
        <argument
            android:name="author_avatar"
            app:argType="string" />
        <argument
            android:name="category"
            app:argType="string" />
        <argument
            android:name="category_icon"
            app:argType="string" />
        <argument
            android:name="poster"
            app:argType="string" />
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="date"
            app:argType="java.util.Date" />
    </fragment>
    <navigation android:id="@+id/auth_flow"
        app:startDestination="@id/nav_auth">
        <fragment
            android:id="@+id/nav_auth"
            android:name="ru.skillbranch.skillarticles.ui.auth.AuthFragment"
            android:label="@string/title_authorization"
            tools:layout="@layout/fragment_auth" >
            <action
                android:id="@+id/action_authFragment_to_privacyPolicyFragment"
                app:destination="@id/page_privacy" />
            <action
                android:id="@+id/action_authFragment_to_registrationFragment"
                app:destination="@id/page_register" />
            <argument
                android:name="intent_destination"
                app:argType="integer"
                android:defaultValue="-1" />
        </fragment>
        <fragment
            android:id="@+id/page_privacy"
            android:name="ru.skillbranch.skillarticles.ui.auth.PrivacyPolicyFragment"
            android:label="@string/title_privacy_policy"
            tools:layout="@layout/fragment_privacy_policy" />
        <fragment
            android:id="@+id/page_register"
            android:name="ru.skillbranch.skillarticles.ui.auth.RegistrationFragment"
            android:label="@string/title_registration"
            tools:layout="@layout/fragment_registration">
            <action
                android:id="@+id/action_registrationFragment_to_privacyPolicyFragment"
                app:destination="@id/page_privacy" />
        </fragment>
    </navigation>

    <!--Global action -->
    <action
        android:id="@+id/start_login"
        app:destination="@id/auth_flow">
        <argument
            android:name="intent_destination"
            app:argType="integer"
            android:defaultValue="-1"/>
    </action>
    <action
        android:id="@+id/finish_login"
        app:popUpTo="@id/auth_flow"
        app:popUpToInclusive="true" />
</navigation>